--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Players</title>
+    <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/525a7ba6e9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
+
 <body>
-    
+
+    <header>
+        <div class="container cabecalho">
+            <a href="index.html">
+                <img src="Images/Logo.svg" alt="Logo do Sit E-Players">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="index.html" title="Voltar para a página inicial">INÍCIO</a></li>
+                    <li><a href="#horarios" title="Ir até a sessão de horários das partidas">HORÁRIOS</a></li>
+                    <li><a href="#resultados" title="Ir até a sessão de resultados das partidas">RESULTADOS</a></li>
+                    <li><a href="#noticias" title="Ir até a sessão de noticias">NOTÍCIAS</a></li>
+                    <li>
+                        <a href="#" title="Buscar conteúdo no site">
+                            <i class="fas fa-search"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
