--- a/index.html
+++ b/index.html
@@ -41,11 +41,60 @@
             <div class="container">
                 <div>
                     <h1>O QUE É MUNDO COMUM?</h1>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis omnis nisi qui, earum fugit similique blanditiis ut quae animi atque error reprehenderit assumenda aliquid laborum veritatis molestiae dolores, harum iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam exercitationem vel officiis, quas in ipsum laudantium est ex id quo ipsam eum sequi nesciunt aliquid. Unde sit et illum natus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti ipsam nostrum harum, earum distinctio perspiciatis mollitia ab, dolore maiores vero sit cupiditate voluptatibus optio voluptatem accusantium possimus, eligendi aperiam blanditiis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto obcaecati iure quaerat animi ratione rem illo voluptates laudantium perferendis libero rerum dolorem labore itaque reiciendis tempore ducimus, unde ipsum ab!</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis omnis nisi qui, earum fugit
+                        similique blanditiis ut quae animi atque error reprehenderit assumenda aliquid laborum veritatis
+                        molestiae dolores, harum iste! Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam
+                        exercitationem vel officiis, quas in ipsum laudantium est ex id quo ipsam eum sequi nesciunt
+                        aliquid. Unde sit et illum natus. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Deleniti ipsam nostrum harum, earum distinctio perspiciatis mollitia ab, dolore maiores vero sit
+                        cupiditate voluptatibus optio voluptatem accusantium possimus, eligendi aperiam blanditiis.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto obcaecati iure quaerat animi
+                        ratione rem illo voluptates laudantium perferendis libero rerum dolorem labore itaque reiciendis
+                        tempore ducimus, unde ipsum ab!</p>
                 </div>
             </div>
         </div>
         <img src="Images/lol-champions-png-8.png" alt="Imagem de uma campeã do LoL" class="campea">
+
+        <section id="horarios">
+            <div class="container">
+                <div class="ao_vivo">
+                    <h2>AO VIVO</h2>
+                    <div class="partida">
+                        <strong>SK</strong>
+                        <img src="Images/SK.png" alt="Logo da Team SK">
+                        <i>VS</i>
+                        <img src="Images/FLA.png" alt="Logo da Team do Flamengo">
+                        <strong>FLA</strong>
+                    </div>
+                </div>
+                <div class="em_breve">
+                    <h2>EM BREVE</h2>
+                    <div class="partida">
+                        <strong>SK</strong>
+                        <img src="Images/SK.png" alt="Logo da Team SK">
+                        <i>VS</i>
+                        <img src="Images/FLA.png" alt="Logo da Team do Flamengo">
+                        <strong>FLA</strong>
+                    </div>
+                    <div class="partida">
+                        <strong>SK</strong>
+                        <img src="Images/SK.png" alt="Logo da Team SK">
+                        <i>VS</i>
+                        <img src="Images/FLA.png" alt="Logo da Team do Flamengo">
+                        <strong>FLA</strong>
+                    </div>
+                    <div class="partida">
+                        <strong>SK</strong>
+                        <img src="Images/SK.png" alt="Logo da Team SK">
+                        <i>VS</i>
+                        <img src="Images/FLA.png" alt="Logo da Team do Flamengo">
+                        <strong>FLA</strong>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <footer>
 
